# fairways

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  make-static.sh  release-h2a.sh  rustfmt.toml  sample.conf
amqprelay/: Cargo.toml
amqprelay/src/: main.rs
ci/: prepare_deploy.sh  win_fix_linker.sh
clirelay/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  messages.rs  models.rs
h2a/: Cargo.toml  to-do.txt
h2a/docs/: amiquip-errors.tsv
h2a/src/: actors.rs  appconfig.rs  appstate.rs  confload.rs  errors.rs  extractors.rs  http_handlers.rs  main.rs  messages.rs
h2a/src/handlers/: amqp_pub.rs
h2a/testsuite/: runsimple.py
src/: main.rs  main1.rs
