[package]
name = "fairways_core"
version = "0.1.0"
authors = ["danwin <dmitry.zimoglyadov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
actix = "0.8.3"
actix-web = "1.0.3"
derive_more = "0.99.2"
