[package]
name = "h2a"
version = "0.1.0"
authors = ["danwin <dmitry.zimoglyadov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fairways_core = { path = "../core" }
futures = "0.1.29"
# lapin-futures = "0.26.10"
amiquip = { version = "0.3", default-features = false }
log = "0.4.8"
env_logger = "0.6.2"
actix = "0.8.3"
actix-web = "1.0.3"
actix-cors = "0.1.0"
# failure="0.1.5"
# websocket = "0.23.0"
# reqwest = "0.9.20"
# reduce = "0.1.2"
serde = "1.0.102"
# serde_json = "1.0.40"
serde_derive = "1.0.102"
# tokio = "0.1.22"
uuid = {version = "0.7.4", features = ["v4"] }
argparse = "0.2.2"
regex = "1.3.1"
lazy_static = "1.4.0"
dotenv = "0.15.0"
derive_more = "0.99.2"
failure = "0.1.6"
actix-broker = "0.2.1"